# enp

./: .gitignore  README.md  index.html  package.json  pyproject.toml  vite.config.js
enp/: api.py  server.py  settings.py  version.py
enp/cli/: __init__.py  run.py  test.py
src/: App.vue
src/components/: NumberInput.vue
static/: index.html
