[tool.poetry]
name = "enp"
version = "0.1.0"
description = "Evergrow Number Printer"
authors = ["Igor Serebryany <igor47@moomers.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
