[tool.poetry]
name = "enp"
version = "0.1.0"
description = "Evergrow Number Printer"
authors = ["Igor Serebryany <igor47@moomers.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
typer = "^0.4.0"
plumbum = "^1.7.2"
mypy = "^0.941"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool.poetry.scripts]
enp = "enp.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "plumbum.*",
]
ignore_missing_imports = true
